# cppNN

./: CMakeLists.txt  convolution.cu  loadImage.cpp
